Criação do metodo dsave